[project]
name = "Sort-Visualizer"
version = "0.1.0"
description = "..."
authors = [{ name = "RogelioKG", email = "rogeliokg0813@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.10.1", "ruff>=0.11.2"]

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
